--- a/src/components/HeroStyles.css
+++ b/src/components/HeroStyles.css
@@ -18,6 +18,7 @@ img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: brightness(0.7);
 }
 .hero-text{
     position: absolute;
